# revoip

./: .clang-format  .env  .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: account.h.9F91C69B407C9B26.idx  agent_aud_audiomediaport.h.291679504CE1711C.idx  agent_cap_audiomediaport.h.C9D42E17298AFF06.idx  agent_robot_audiomediaport.h.0C7E96FFBDEBBC10.idx  ansicolor_sink-inl.h.77C97105590DAD8C.idx  ansicolor_sink.h.3E016371F4D9583F.idx  async.cpp.73BBCB3A019F7E2E.idx  async.h.B1F4398D9609F48E.idx  async_logger-inl.h.BBDE4532A45A1091.idx  async_logger.h.F20DE2176D39C1EA.idx  backtracer-inl.h.D96F6DFCD68ACC58.idx  backtracer.h.A124683640F70625.idx  base.h.156A3C2B79289A2A.idx  base_sink-inl.h.411990AFFFEDEC80.idx  base_sink.h.DDCDDCDC4F82B3FE.idx  basic_file_sink-inl.h.8A6626D5AAD3E53F.idx  basic_file_sink.h.49ECF6544E863EE8.idx  bundled_fmtlib_format.cpp.C909C0C05AAC6FD4.idx  caller.h.8953E5FE75387F65.idx  caller_queue.h.588B9DE999E6CD1C.idx  cfg.cpp.CE2239BDB765BF9B.idx  circular_q.h.41DE08332350566D.idx  color_sinks.cpp.F097C76447B0B363.idx  common-inl.h.988297C985361EF9.idx  common.h.7A245F320967F5BF.idx  (+64 more)
src/: account_check.cc  account_check.h  account_check_manager.cc  account_check_manager.h  caller.cc  caller.h  caller_queue.h  coordinator.cc  coordinator.h  dialplan_queue.cc  dialplan_queue.h  env.h  io_context_pool.cc  io_context_pool.h  logger.cc  main.cc  singleton.hpp  thread_pool.cc  thread_pool.h  vaccount.cc  vaccount.h
src/agent/: agent_ws_client.cc  agent_ws_client.h  asr_ws_client.h  llm_http_client.h  tts_http_client.h
src/client/: web_ws_client.cc  web_ws_client.h
src/core/: caller_queue.cc  check_acc.h  check_acc_mgr.h  dialplan_queue.cc  dialplan_queue.h  endpoint_core.h  incoming_acc.h  incoming_call.h  outcoming_acc.h  outcoming_acc_mgr.h  outcoming_call.h  outcoming_call_que.h  outcoming_center.h  session_core.h  sip_core.h
src/event/: event.h  msg.h
src/mediaport/: agent_aud_audiomediaport.cc  agent_aud_audiomediaport.h  agent_cap_audiomediaport.cc  agent_cap_audiomediaport.h  agent_robot_audiomediaport.cc  agent_robot_audiomediaport.h
src/server/: gui_ws_server.h  ws_session.h
test_server/asr_ws_client/: CMakeLists.txt  asr-server.crt
test_server/asr_ws_client/.marscode/: deviceInfo.json
test_server/asr_ws_client/src/: asr_ws_client.h  audio_dev.h  logger.h  main.cc
test_server/call_server/: client_id.txt  requirements.txt  server.crt  server.key  server.py
(+2 files in other folders)
